// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GroupsDetailsPanel /> renders Groups detailsPanel 1`] = `
<styled.div
  id="dtpanel-groups"
>
  Mock Child
  <DetailHeader
    onActionButtonClick={[Function]}
    text="undefined User(s)"
    userHasUpdatePermission={true}
  />
  <_class
    contains="users"
    userHasUpdatePermission={true}
  />
</styled.div>
`;

exports[`<GroupsDetailsPanel /> renders Groups detailsPanel with no update permision 1`] = `
<styled.div
  id="dtpanel-groups"
>
  <React.Fragment>
    <Detail
      label="Name"
      value="mockName"
    />
    <Detail
      label="Description"
      value="mockDescription"
    />
    <Detail
      label="Status"
      value="Enabled"
    />
  </React.Fragment>
  <DetailHeader
    onActionButtonClick={[Function]}
    text="undefined User(s)"
    userHasUpdatePermission={false}
  />
  <_class
    contains="users"
    userHasUpdatePermission={false}
  />
</styled.div>
`;

exports[`<GroupsDetailsPanel /> renders Groups detailsPanel with status disabled 1`] = `
<styled.div
  id="dtpanel-groups"
>
  Mock Child
  <DetailHeader
    onActionButtonClick={[Function]}
    text="undefined User(s)"
    userHasUpdatePermission={true}
  />
  <_class
    contains="users"
    userHasUpdatePermission={true}
  />
</styled.div>
`;
